# equiv

./: .equiv-review  .equiv-review.example  .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  README.md  action.yml  index.html
.github/workflows/: equiv-review.yml  tests.yml
conformance/valid/: copy.eqct  crc32.eqct  sat_inc.eqct  utf8_valid.eqct  varint.eqct
crates/equiv-cli/: Cargo.toml
crates/equiv-cli/src/: main.rs
crates/equiv-core/: Cargo.toml
crates/equiv-core/src/: ast.rs  attest.rs  cbor.rs  codec.rs  lib.rs  sign.rs  text.rs  verdict.rs
crates/equiv-core/tests/: attest.rs  conformance.rs  signing.rs
crates/equiv-engine/: Cargo.toml
crates/equiv-engine/examples/: coverage.rs
crates/equiv-engine/src/: difftest.rs  eval.rs  lib.rs  wasm.rs
crates/equiv-engine/src/bmc/: blast.rs  mod.rs  sym.rs  term.rs
crates/equiv-engine/tests/: bmc.rs  difftest.rs
crates/equiv-review/: Cargo.toml
crates/equiv-review/src/: lib.rs
crates/equiv-review/tests/: autodetect.rs  floats.rs  generation.rs  objects.rs  oracle.rs
docs/: RELEASING.md  signing-model.md
examples/: README.md  math.py
examples/scenarios/: README.md
examples/scenarios/binary-search-overflow/: candidate.py  reference.py
examples/scenarios/empty-collection-guard/: candidate.py  reference.py
examples/scenarios/gauss-clamp/: candidate.py  reference.py
examples/scenarios/geodesy-antimeridian/: candidate.py  reference.py
examples/scenarios/stripe-jpy/: candidate.py  reference.py
examples/scenarios/tax-allowance-floor/: candidate.py  reference.py
scripts/: equiv-review-entrypoint.sh
