[workspace]
members = ["crates/equiv-core", "crates/equiv-engine", "crates/equiv-review", "crates/equiv-cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Neelagiri65/equiv"

[profile.release]
opt-level = 2
lto = true
strip = true

# The release profile dist builds with (`cargo build --profile dist`).
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
